diesel_compile_tests/tests/ui/insertable_missing_table_or_column.stderr
error[E0433]: failed to resolve: use of undeclared type or module `posts`
  --> $DIR/insertable_missing_table_or_column.rs:11:8
   |
11 | struct Post {
   |        ^^^^ use of undeclared type or module `posts`
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: use of undeclared type or module `posts`
  --> $DIR/insertable_missing_table_or_column.rs:16:16
   |
16 | #[table_name = "posts"]
   |                ^^^^^^^ use of undeclared type or module `posts`
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0412]: cannot find type `name` in module `users`
  --> $DIR/insertable_missing_table_or_column.rs:24:5
   |
24 |     name: String
   |     ^^^^ not found in `users`

error[E0425]: cannot find value `name` in module `users`
  --> $DIR/insertable_missing_table_or_column.rs:24:5
   |
24 |     name: String
   |     ^^^^ not found in `users`

error[E0412]: cannot find type `name` in module `users`
  --> $DIR/insertable_missing_table_or_column.rs:30:21
   |
30 |     #[column_name = "name"]
   |                     ^^^^^^ not found in `users`
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find value `name` in module `users`
  --> $DIR/insertable_missing_table_or_column.rs:30:21
   |
30 |     #[column_name = "name"]
   |                     ^^^^^^ not found in `users`
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0412, E0425, E0433.
For more information about an error, try `rustc --explain E0412`.
